sidebar should be fixed now, larger text on mobile

--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@ object {
   }
   
   object {
-    border: 2px solid #333;
+    /* border: 2px solid #333; */
     background-color: transparent;
     height: 150pt;
   } 
